--- a/Rapport/kontekst/implementation.tex
+++ b/Rapport/kontekst/implementation.tex
@@ -4,84 +4,148 @@ This chapter will describe the implementation of the systems components. It will
 
 \section{Microsoft Kinect}
 \label{sec:Microsoft Kinect Implementation}
+This section will describe how the Kinect sends coordinates to the Arduino.
+The Kinect gives information about the balls predicted impact point, in relation to its field of view and the distance to the point. The coordinate has to be converted to fit in a coordinate system that has it’s 0,0 at the Kinect, X-axis out from the side of the Kinect, and Y-axis out perpendicular from the front of the Kinect.
+An detailed description of the conversion can be found in \ref{sec:i3Connecting Arduino and Kinect implementation}.
+
+The coordinate can then be send to the Arduino, using its IP-address and a tcpClient. 
+When writing to the tcpClient’s stream, the information is send to the server on the Arduino, that should be waiting to retrieve it.
+The code for this can be seen here:
+
+\begin{lstlisting}[caption={Sending data to the Arduino}, label={sendData}]
+tcpClient = new TcpClient();
+tcpClient.Connect("192.168.0.100", 9999);
+stream = tcpClient.GetStream();
+
+stream.Write(Encoding.UTF8.GetBytes((finalx.ToString() + ";" + finaly.ToString()).ToCharArray()), 0, (finalx.ToString() + ";" + finaly.ToString()).Length);
+tcpClient.Close();
+\end{lstlisting}
+
 
 \section{Robot}
 \label{sec:Robot}
 This section will describe arduino code for the robot. This will include how the arduino connects to the Kinect and the robots behaviour and calculations done by the arduino. If there was any comments in the original code, they have been removed in the listings for this chapter. \newline
 A problem occurred when both the WiFi shield and the motor shield should work together. When the WiFi shield is trying to connect to the network and if any of the motor shield components are initialized at the beginning of the program, it isn't possible to connect to the network. If it is connected to the network before the motor shield components are initialized, it is possible to receive data and use the motor shield components.
 
-The arduino setup function, is a function run once at the beginning of the running program, to setup the program as the name implies. In listing \ref{lst:setup} the setup function is shown, which in this project will connect to the private network, using the guide from arduinos own website \citep{wg}. \newline
-Basically it will try to connect to the specific network by passing the network name and password to the function WiFi.begin(), given by the WiFi library. If the arduino can't connect to the network "Couldn't get a wifi connection" will be printed to the console and it will exit the program with the while(true) loop. Else the arduino will call the function server.begin() and is now connected to the network.
+The arduino setup function, is a function run once at the beginning of the running program, to setup the program as the name implies. In listing \ref{lst:setup} the setup function is shown, which in this project will connect to the private network, using the guide from Arduinos own website, and get the first coordinate \citep{wg}. \newline
+It will try to connect to the specific network by passing the network name and password to the function WiFi.begin(), given by the WiFi library. If the arduino can't connect to the network, the program will exit. If it successfully connects, the arduino will call the function server.begin() to initialize a serve that can receive data, and is now connected to the network.
+The \textbf{dataString}  variable contains the data received, so the while loop makes sure that the program waits for the coordinates before continuing. A client variable will be initialized using server.available(), which will make the arduino ready to receive data. The function client.available(), returns true if the server has received any information. If true, the data is appended to the dataString, and execution of the program will continue.
+\newline
+goalX and goalY is then extracted from the \textbf{dataString} and converted to integers.
 
 \begin{lstlisting}[caption={The arduino setup function}, label={lst:setup}]
 void setup() {
 	Serial.begin(9600);           
-	Serial.println("Attempting to connect to WPA network...");
 	status = WiFi.begin(ssid, pass);
-
-	if ( status != WL\_CONNECTED) { 
-		Serial.println("Couldn't get a wifi connection");
-		while(true);
+	if ( status != WL_CONNECTED) { 
+		exit(0);
 	} 
 	else {
 		server.begin();
-		Serial.println("Connected to network");
-	}	
+	}
 	ip = WiFi.localIP();
-	Serial.println(ip);
-}
-\end{lstlisting}
 
-The arduino loop function is where the arduino's behaviour is programmed, since it will loop over the code in this function. In listing \ref{lst:loop} lines 2-15, the arduino is to receive data from the Kinect. The boolean \textbf{shouldDrive} is initialized to false, therefore it will enter the first if-statement. The client will be initialized to server.available(), which will make the arduino ready to receive data. The if-statement at line 4 it will receive the data from the Kinect and append the chars to the string \textbf{dataString}, which will contains the coordinate set for the objects impact position. \newline
-At the if-statement at line 10, it will get the goalX and goalY coordinates from the string \textbf{dataString} and convert them to integers. Then setting the boolean \textbf{shouldDrive} = true, and set the string \textbf{dataString} = "". \newline
-Since \textbf{shouldDrive} is now true, it will enter the else-statement at line 16. Lines 17-33 are setting up the arduino to get ready to drive to the received coordinate point. First it will initialize the motors, setting the attaching the interrupts for the motor encoders, setting the motorspeed and releaseing the motors so it won't drive. Also it will initialized two new integers \textbf{leftTemp} and \textbf{rightTemp} to the value of the integers of \textbf{leftTotal} and \textbf{rightTotal} at the given time in the program.
-
-\begin{lstlisting}[caption={The arduino loop function}, label={lst:loop}]
-void loop() {
-	if (!shouldDrive) {
+	while(dataString == ""){
 		client = server.available();
 		if (client.connected()){
 			while (client.available()) {
-			char c = client.read(); 
-			dataString += c;
+				char c = client.read(); 
+				dataString += c;
 			}
 		}
-		if (dataString != "") {
-			goalX = dataString.substring(0,dataString.indexOf(';')).toInt();
-			goalY = dataString.substring(dataString.indexOf(';')+1).toInt();
-			shouldDrive = true;
-			dataString = "";
-		}
-	} else {
-		AF_DCMotor motorLeft(1);
-		AF_DCMotor motorRight(2);
-		pinMode(LEFTENCODERPIN, INPUT);
-		attachInterrupt(3, incrementLeft, CHANGE);
-		pinMode(RIGHTENCODERPIN, INPUT);
-		attachInterrupt(2, incrementRight, CHANGE);
-		
-		motorLeft.setSpeed(255);
-		motorRight.setSpeed(255);			
-		motorLeft.run(RELEASE);
-		motorLeftRun = false;
-		motorRight.run(RELEASE);
-		motorRightRun = false;
-		
-		leftTemp = leftTotal;
-		rightTemp = rightTotal;
-		
-		if(posX <= goalX + margin && posX >= goalX - margin && posY <= goalY + margin && posY >= goalY - margin){
-			stopIfAtGoal();
-		} else {
-			driveTowardsGoal();  
-		}
-		delay(10);
-		updatePosAndHead();
 	}
+	goalX = dataString.substring(0,dataString.indexOf(';')).toInt();
+	goalY = dataString.substring(dataString.indexOf(';')+1).toInt();  
+	
+	pinMode(LEFTENCODERPIN, INPUT);
+	attachInterrupt(3, incrementLeft, CHANGE);
+	pinMode(RIGHTENCODERPIN, INPUT);
+	attachInterrupt(2, incrementRight, CHANGE);
+	
+	leftTemp = leftTotal;
+	rightTemp = rightTotal;
 }
 \end{lstlisting}
 
 
+
+Now that the robot knows it destination it needs to calculate how to get there, but before it does that it needs to know its own position and heading. The system used to determine position and heading is defined as follows:
+
+Position is defined as a x and y coordinate like so: (x,y). \newline
+Heading 0 is straight up parallel to the y axis \newline
+Headings clockwise from the y axis are negative and headings counterclockwise are positive. \newline
+Heading can range from -179deg to 180deg. \newline
+
+The robots motors each has an encoder that will give a high volt signal to the arduino for every 2 degrees the motor turns. The arduino is set up to interrupt on pin change, which means the interrupt handler for each motor will be executed for each degree the motor turns. Each interrupt handler increments an int, leftTotal for the left motor and rightTotal for the right motor. \newline
+Using these two variables, postition and heading of the robot can be calculated, or rather the delta postion and heading compared to the last time position and heading was calculated.
+First the values of leftTotal and rightTotal are saved to two new variables currentLeft and currentRight such that they dont change while using them in calculation. Now to find how far the robot has moved since last calculation, the last iterations degree count called temp(Left/Right) is subtracted from the current to get the delta degree count. To get the actual distance each wheel has moved, the delta degree count is multiplied by the amount of millimeters the wheel travels per degree. The position of the robot is set to be between the wheels, so to get how far the position has moved the two distances that the wheels have moved are added together and devided by 2. Next, to find the new position in coordinates the distance traveled is multiplied with sinus to the heading to get the change in the x direction and cosinus to the heading to get the change in the y direction. These two values are added to the current position to get the new position. Now to get the change in heading, the distance the right wheel traveled is subtracted by the distance the left wheel traveled to get the distance the 2 traveled compared to each other. Arctan to this value devided by the distance between the wheels gives the change in heading, which is added to the current heading to get the new one.
+\begin{lstlisting}[caption={updatePosAndHead function}, label={lst:upah}]
+void updatePosAndHead(){
+	int currentLeft = leftTotal;
+	int currentRight = rightTotal;
+	double deltaLeft = (currentLeft - leftTemp) * DISTPRDEGREE;
+	double deltaRight = (currentRight - rightTemp) * DISTPRDEGREE;
+	leftTemp = currentLeft;
+	rightTemp = currentRight;
+	double dist = (deltaLeft + deltaRight) / 2.0;
+	posX += (dist * sin(heading));
+	posY += (dist * cos(heading));
+	heading += (atan((deltaRight - deltaLeft) / WHEELDIST));
+}
+\end{lstlisting}
+
+The robot now knows its destination plus its own position and heading. To get to the destination the robot can do 4 things: drive forward on one wheel and let the other stand still or vice versa, drive both wheels forward or stand still on both wheels. So basically left, right, forward or nothing. The arduino first determines if the robot is already at the goal position or it needs to move. To do this it simply compares its current position with the final destination and determines if this difference is within a give margin of error. If it is, it stops and exits the program.
+
+\begin{lstlisting}[caption={If-statement to check if the robot should stop}, label={lst:stopplz}]
+if(posX <= goalX + margin && posX >= goalX - margin && posY <= goalY + margin && posY >= goalY - margin){
+	motorLeft.run(RELEASE);
+	motorRight.run(RELEASE);
+	delay(50);
+	exit(0);
+} 
+\end{lstlisting}
+
+If it is not the robot needs to be moved. To figure out whether to go left, right or forward the arduino calculates the goal heading that is needed at the current postition to point directly (or almost directly) at the goal destination. Next this heading is compared to the current heading and the arduino determines whether a right, left or no turn is needed. This is done like this:
+First the goal position is subtracted by the current position to get how far the robot needs to travel in the x and y direction, from here called deltaX and deltaY. \newline
+If deltaX is 0, the goal is either straight up parallel to the y axis at heading 0 or straight down parallel to the y axis at heading 180 or PI in radians. \newline
+If deltaX is bigger than 0, arctan is taken to deltaY devided by deltaX, this gives the angle to the positive x axis. This is subtracted by 90 degrees (PI/2 in radians) to get the angle to the positive y axis, which is the goal heading. \newline
+If deltaX is smaller than 0, almost the same thing as above happens. The only difference is that the angle from the arctan calculation will give en angle to the negative x axis, so the results is added to 90 degrees (PI/2 in radians) instead of substracted by it.
+
+\begin{lstlisting}[caption={Part of the driveTowardsGoal function to calculate the goalHeading}, label={lst:calcGH}]
+double deltaX = goalX - posX;
+double deltaY = goalY - posY;
+double actualGoalHeading;
+if(deltaX == 0 && deltaY > 0)
+	actualGoalHeading = 0;
+else if(deltaX == 0 && deltaY < 0)
+	actualGoalHeading = PI;
+else
+	actualGoalHeading = deltaX >= 0 ? atan(deltaY/deltaX) - (PI/2) : atan(deltaY/deltaX) + (PI/2);
+\end{lstlisting}
+
+
+The difference between the current heading and goal heading is then calculated by subctracting the current heading from the goal heading, this is from here on called the deltaHeading. \newline
+If deltaHeading is larger than 180 degrees (PI in radians) it whould be faster to go the other way around, so deltaHeading is subtracted by 360 degrees (2PI in radians). \newline
+if deltaHeading is smaller than -180 degrees (-PI in radians) the same thing aplies, but the other way so 360 degrees (2PI in radians) is added instead. \newline
+Lastly it is determined if the deltaheading calls for a left turn, a right turn or full speed ahead.
+
+\begin{lstlisting}[caption={Check the difference of the actualGoalHeading and its current heading, and determines which motors to run}, label={lst:heading}]
+double deltaHeading = actualGoalHeading - heading;
+if(deltaHeading > PI)
+	deltaHeading -= 2*PI;
+else if(deltaHeading < -PI)
+	deltaHeading += 2*PI;
+if(deltaHeading < -0.1){
+	motorLeft.run(FORWARD);
+	motorRight.run(RELEASE);
+}else if(deltaHeading > 0.1){
+	motorLeft.run(RELEASE);
+	motorRight.run(FORWARD);
+}else{
+	motorLeft.run(FORWARD);
+	motorRight.run(FORWARD);
+}
+\end{lstlisting}
 
 \section{Scheduling}
 \label{sec:Scheduling implementation}
@@ -101,38 +165,38 @@ To be able to work around the float issues with Bound-T, a library called AVRFIX
 
 \begin{lstlisting}[caption={The function updatePosAndHead with AWRFIX library}, label={Update1}]
 void updatePosAndHead(){
-int currentLeft = leftTotal;
-int currentRight = rightTotal;
-fix_t distPrDeg = ftok(DISTPRDEGREE);
-fix_t dltL = itok(currentLeft - leftTemp);
-fix_t dltR = itok(currentRight - rightTemp);
-fix_t deltaLeft = mulk(dltL, distPrDeg);
-fix_t deltaRight = mulk(dltR, distPrDeg);
-leftTemp = currentLeft;
-rightTemp = currentRight;
-fix_t deltaSum = deltaLeft + deltaRight;
-fix_t dist = divk(deltaSum,ftok(2.0));
-fix_t sinHeading = sink(heading);
-posX += mulk(dist, sinHeading);
-fix_t cosHeading = cosk(heading);
-posY += mulk(dist, cosHeading);
-fix_t rel = divk((deltaRight - deltaLeft),ftok(WHEELDIST));
-heading += atank(rel);
+	int currentLeft = leftTotal;
+	int currentRight = rightTotal;
+	fix_t distPrDeg = ftok(DISTPRDEGREE);
+	fix_t dltL = itok(currentLeft - leftTemp);
+	fix_t dltR = itok(currentRight - rightTemp);
+	fix_t deltaLeft = mulk(dltL, distPrDeg);
+	fix_t deltaRight = mulk(dltR, distPrDeg);
+	leftTemp = currentLeft;
+	rightTemp = currentRight;
+	fix_t deltaSum = deltaLeft + deltaRight;
+	fix_t dist = divk(deltaSum,ftok(2.0));
+	fix_t sinHeading = sink(heading);
+	posX += mulk(dist, sinHeading);
+	fix_t cosHeading = cosk(heading);
+	posY += mulk(dist, cosHeading);
+	fix_t rel = divk((deltaRight - deltaLeft),ftok(WHEELDIST));
+	heading += atank(rel);
 }
 \end{lstlisting}
 
 \begin{lstlisting}[caption={The function updatePosAndHead from the Arduino IDE}, label={Update2}]
 void updatePosAndHead(){
-int currentLeft = leftTotal;
-int currentRight = rightTotal;
-double deltaLeft = (currentLeft - leftTemp) * DISTPRDEGREE;
-double deltaRight = (currentRight - rightTemp) * DISTPRDEGREE;
-leftTemp = currentLeft;
-rightTemp = currentRight;
-double dist = (deltaLeft + deltaRight) / 2.0;
-posX += (dist * sin(heading));
-posY += (dist * cos(heading));
-heading += (atan((deltaRight - deltaLeft) / WHEELDIST));
+	int currentLeft = leftTotal;
+	int currentRight = rightTotal;
+	double deltaLeft = (currentLeft - leftTemp) * DISTPRDEGREE;
+	double deltaRight = (currentRight - rightTemp) * DISTPRDEGREE;
+	leftTemp = currentLeft;
+	rightTemp = currentRight;
+	double dist = (deltaLeft + deltaRight) / 2.0;
+	posX += (dist * sin(heading));
+	posY += (dist * cos(heading));
+	heading += (atan((deltaRight - deltaLeft) / WHEELDIST));
 }
 \end{lstlisting}
 
