--- a/Rapport/kontekst/DesignSpecification.tex
+++ b/Rapport/kontekst/DesignSpecification.tex
@@ -46,4 +46,4 @@ The requirements for the project are established throughout the whole process an
 \section{Delimitations}
 \label{sec:Delimitations}
 It has been decided that for simplicity, only one object will be thrown at any given time. This delimits any multiple object tracking and prediction. \newline
-It has also been decided that the robot should not drive backwards. The robot starts outside its predefined area and will only drive forward into the area. This means that if the robot is already heading towards a point in its predefined area, and the Kinect sends a new point, which is behind the robot, it will not be able to drive to the new point given by the Kinect. 
+It has also been decided that the robot should not drive backwards. The robot starts on the edge of its predefined area and will only drive forward into the area. This means that if the robot is already heading towards a point in its predefined area, and the Kinect sends a new point, which is behind the robot, it has to turn 180 deg to drive to the new point given by the Kinect. 
