--- a/Rapport/intro/processModel.tex
+++ b/Rapport/intro/processModel.tex
@@ -1,6 +1,6 @@
 \chapter{Process model}
 \label{Process model}
-Process models for software development is a representation of the process and the activities required for developing the software. In software engineering there is two different development methods, pland-driven and agile development. The plan-driven approach is based on sperate development stages and iterations can occur within the activities e.g. the implementation of the software. The agile approach the specification, design, implementation and tests are all iterated on as a whole. \citep{sommerville}
+Process models for software development is a representation of the process and the activities required for developing the software. In software engineering there is two different development approaches, pland-driven and agile development. The plan-driven approach is based on sperate development stages and iterations can occur within the activities e.g. the implementation of the software. The agile approach the specification, design, implementation and tests are all iterated on as a whole. \citep{sommerville}
 
 The process model is a meld of elements from both plan driven and agile development. The process is plan driven in so far as to include a clear goal of what the initial requirements of the system are. The process model is very agile in that, although there is a clear outline as to what the requirements are, these are incrementally approached, with a simple starting point becoming increasingly covering of the project vision through the subsequent increments. The reason the group approached this project with our 'own' process model is to better explain what we're actually doing, rather than forcing ourselves into picking a development method and try to explain what we're doing according to that method.
 
