--- a/Rapport/formalia/titelblad.tex
+++ b/Rapport/formalia/titelblad.tex
@@ -54,7 +54,7 @@ Bent Thomsen
 
 
 \textbf{Pagecount: \pageref{LastPage}} \\
-\textbf{Appendix range: X} \\ 
+\textbf{Appendix range: 24} \\ 
 \textbf{Published 21-12-2016}
 
 \end{minipage}
